--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "axios": "^0.27.2",
     "firebase": "^9.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.51.0",
+    "styled-icons": "^10.45.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
