--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "sass": "^1.51.0",
     "styled-icons": "^10.45.0",
     "typescript": "^4.6.4",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-table": "^7.7.12",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
