--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "axios": "^0.27.2",
+    "chart.js": "^3.7.1",
     "firebase": "^9.8.0",
     "react": "^18.1.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.3.0",
